<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_10"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_25"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_35"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_40"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_45"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_50"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_55"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".55"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_60"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_65"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".65"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_75"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_80"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gh_90"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gh_10"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".10"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gh_15"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gh_35"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".35"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gh_40"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".4" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gh_50"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gh_60"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".6" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gh_65"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".65"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gh_85"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gh_90"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".90"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/h_gh_45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/h_gh_10"
        app:layout_constraintBottom_toTopOf="@id/h_gh_35"
        app:layout_constraintStart_toStartOf="@id/v_gh_10"
        app:layout_constraintEnd_toEndOf="@id/v_gh_90">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img"
            />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/h_gh_40"
        app:layout_constraintBottom_toTopOf="@id/h_gh_60"
        app:layout_constraintStart_toStartOf="@id/v_gh_40"
        app:layout_constraintEnd_toEndOf="@id/v_gh_60"
        app:cardBackgroundColor="@color/red">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rounded_article_24"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/cardview_shadow_start_color"
            />
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/show_Attendance"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="@id/h_gh_55"
        app:layout_constraintBottom_toBottomOf="@id/h_gh_60"
        app:layout_constraintStart_toStartOf="@id/v_gh_40"
        app:layout_constraintEnd_toEndOf="@id/v_gh_60"
        android:textColor="@color/white"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/h_gh_40"
        app:layout_constraintBottom_toTopOf="@id/h_gh_60"
        app:layout_constraintStart_toStartOf="@id/v_gh_15"
        app:layout_constraintEnd_toEndOf="@id/v_gh_35"
        app:cardBackgroundColor="@color/gold">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_calendar_month_24"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/cardview_shadow_start_color"
            />
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Mark_Attendance"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="@id/h_gh_55"
        app:layout_constraintBottom_toBottomOf="@id/h_gh_60"
        app:layout_constraintStart_toStartOf="@id/v_gh_15"
        app:layout_constraintEnd_toEndOf="@id/v_gh_35"
        android:textColor="@color/white"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/h_gh_40"
        app:layout_constraintBottom_toTopOf="@id/h_gh_60"
        app:layout_constraintStart_toStartOf="@id/v_gh_65"
        app:layout_constraintEnd_toEndOf="@id/v_gh_85"
        app:cardBackgroundColor="@color/bluelight">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/openbook"
            android:src="@drawable/baseline_menu_book_24"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/cardview_shadow_start_color"
            />
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/homework"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="@id/h_gh_55"
        app:layout_constraintBottom_toBottomOf="@id/h_gh_60"
        app:layout_constraintStart_toStartOf="@id/v_gh_65"
        app:layout_constraintEnd_toEndOf="@id/v_gh_85"
        android:textColor="@color/white"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/h_gh_65"
        app:layout_constraintBottom_toBottomOf="@id/h_gh_75"
        app:layout_constraintStart_toStartOf="@id/v_gh_10"
        app:layout_constraintEnd_toEndOf="@id/v_gh_40">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gallery"
            android:textColor="@color/pink"
            android:gravity="center"
            app:drawableEndCompat="@drawable/baseline_add_photo_alternate_24"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/h_gh_65"
        app:layout_constraintBottom_toBottomOf="@id/h_gh_75"
        app:layout_constraintStart_toStartOf="@id/v_gh_60"
        app:layout_constraintEnd_toEndOf="@id/v_gh_90">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notice"
            android:textColor="@color/green"
            android:gravity="center"
            app:drawableEndCompat="@drawable/baseline_email_24"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/h_gh_80"
        app:layout_constraintBottom_toBottomOf="@id/h_gh_90"
        app:layout_constraintStart_toStartOf="@id/v_gh_10"
        app:layout_constraintEnd_toEndOf="@id/v_gh_40">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pay_fee"
            android:textColor="@color/bluelight"
            android:gravity="center"
            app:drawableEndCompat="@drawable/rounded_currency_rupee_circle_24"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/h_gh_90"
        app:layout_constraintEnd_toEndOf="@id/v_gh_90"
        app:layout_constraintStart_toStartOf="@id/v_gh_60"
        app:layout_constraintTop_toTopOf="@+id/h_gh_80">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/pay_fee"
            android:textColor="@color/gold"
            app:drawableEndCompat="@drawable/rounded_account_circle_24" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>